# ProgramingGame

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
libs/core/: CMakeLists.txt
libs/core/include/: GraphicsEngine.hpp  GuiEngine.hpp  Profiler.hpp  common.hpp
libs/core/src/: GraphicsEngine.cpp  GuiEngine.cpp
libs/core/src/ui/: Button.cpp  Button.hpp  GuiEngine.cpp  Icon.cpp  Icon.hpp  Text.cpp  Text.hpp  Window.cpp  Window.hpp
libs/libcollision/: CMakeLists.txt
libs/libcollision/algorithm/: ExpandingSimplex.cpp  ExpandingSimplex.h  ExpandingSimplexEdge.h  GJKCollisionDetector.cpp  GJKCollisionDetector.h  MinkowskiSum.h
libs/libcollision/geometry/: Polygon.cpp  Polygon.h
libs/libcollision/math/: Epsilon.cpp  Transform2.h  Vector2Util.h
libs/libcollision/structures/: mat2x2.hpp
resources/blender/: camera_script.py  game_objects.blend  heater.blend  heater.blend1  modules.blend  parts.blend
resources/code/: Unsaved Document 1  func.txt  test.txt  test2.txt
src/: Box.hpp  CMakeLists.txt  Controller.hpp  ManipulatorArm.hpp  common.hpp  main.cpp
src/common/: common.cpp  common.hpp  math.hpp
src/graphics/: GraphicsEngine.cpp  GraphicsEngine.hpp
src/logic/: Arm.cpp  Arm.hpp  Box.cpp  Box.hpp  Builder.hpp  Controller.cpp  Controller.hpp  CustomMachinery.hpp  CustomMachines.hpp  GameObject.hpp  GameWorld.cpp  GameWorld.hpp  Machine.cpp  Machine.hpp  Machinery.cpp  Machinery.hpp  MachineryBuilder.hpp  ManipulatorArm.cpp  ManipulatorArm.hpp  Module.cpp  Module.hpp
src/ui/: Button.cpp  Button.hpp  GuiEngine.cpp  GuiEngine.hpp  Icon.cpp  Icon.hpp  Text.cpp  Text.hpp  Window.cpp  Window.hpp
